css/style.css
body {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
    font-size: 14px;
    font-weight: 400;
}
a, a:hover, a:focus {
    text-decoration: none;
    color: inherit;
}
.outer-wrapper {
    display: table;
    width: 100%;
}
.inner-wrapper {
    display: table-cell;
    vertical-align: middle;
    height: 100vh;
}
.container-md {
    width: 100%;
    max-width: 1180px;
    margin: 0 auto;
}
.container-sm {
    width: 100%;
    max-width: 960px;
    margin: 0 auto;
}
.space-btw {
    text-align: justify;
}
.space-btw:after {
	content: '';
	display: inline-block;
	width: 100%;
}
.space-btw>* {
	display: inline-block;
}
.up_link {
    position: fixed;
    bottom: 30px;
    right: 14px;
    z-index: 999;
}
.up_link>img {
    width: 45px;
}
#ask_popup {
    background-color: #00968c;
    position: fixed;
    left: 50%;
    margin-left: -145px;
    width: 100%;
    max-width: 290px;
    z-index: 9999;
    padding: 20px;
}
#ask_popup .input-field, #ask_popup textarea {
    background-color: #fff;
    color: #6c6c6c;
}
#ask_popup h2 {
    font-size: 22px;
    font-size: 700;
    text-align: center;
    margin-bottom: 20px;
    color: #fff;
}
.ask-hidden {
    -webkit-transition: all 300ms ease-out;
    -moz-transition: all 300ms ease-out;
    -o-transition: all 300ms ease-out;
    transition: all 300ms ease-out;
    
    bottom: -410px;
}
.ask-visible {
    -webkit-transition: all 400ms ease-out;
    -moz-transition: all 400ms ease-out;
    -o-transition: all 400ms ease-out;
    transition: all 400ms ease-out;
    
    bottom: 120px;
}
.ask-btn {
    background-image: url(../img/ask_btn.png);
    background-position: right;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor: pointer;
    height: 60px;
    width: 100%;
    max-width: 290px;
    position: fixed;
    bottom: 30px;
    left: 50%;
    margin-left: -145px;
    z-index: 99;
}


.main-block {
    position: relative;
    background-color: #4e4e4e;
    min-height: 100vh;
    overflow: hidden;
}
.navbar-main {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -webkit-flex-flow: row wrap;
    justify-content: space-between;
}
.logo {
    margin-left: 25px;
    padding-top: 20px;
}
.nav-right {
    font-size: 18px;
    color: #fff;
    font-weight: 400;
    margin-top: 30px;
}
.nav-right>* {
    height: 30px;
    display: inline-block;
    vertical-align: middle;
}
.phone-holder {
    margin-right: 50px;
}
.phone-holder img {
    width: 30px;
    display: inline-block;
    vertical-align: middle;
}
.lang-holder {
    margin-right: 30px;
}
.tablet-main {
    position: absolute;
    background-image: url(../img/tablet.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    width: 100%;
    max-width: 800px;
    height: 500px;
    left: 50%;
    margin-left: -400px;
    top: 50%;
    margin-top: -250px;
}
.block-header {
    width: 100%;
    text-align: center;
}
.tablet-points {
    position: absolute;
    top: 204px;
    left: 223px;
    font-size: 18px;
    padding-left: 15px;
    z-index: 10;
}
.tablet-points li {
    background: url(../img/check_li.png) no-repeat left top;
    padding: 3px 0px 3px 50px;
    list-style: none;
    margin: 10px 0;
}
h1 {
    width: 316px;
    text-align: center;
    font-size: 20px;
    color: #000;
    position: absolute;
    top: 105px;
    left: 50%;
    margin-left: -163px;
}
.float-img-1>img, .float-img-2>img, .float-img-3>img, .float-img-4>img {
    width: 100%;
}
.float-img-1 {
    position: absolute;
    left: 50%;
    margin-left: -830px;
    top: 100px;
    width: 36%;
    max-width: 490px;
}
.float-img-2 {
    transform: rotate(-20deg);
    position: absolute;
    left: 50%;
    bottom: -140px;
    width: 40%;
    max-width: 600px;
    margin-left: -925px;
}
.float-img-3 {
    transform: rotate(42deg);
    position: absolute;
    right: 50%;
    margin-right: -670px;
    bottom: 10px;
    width: 27%;
    max-width: 350px;
}
.float-img-4 {
    transform: rotate(20deg);
    position: absolute;
    right: 50%;
    margin-right: -930px;
    top: 110px;
    width: 40%;
    max-width: 540px;
}
.second-block {
    overflow-x: hidden;
}
.block-white {
    text-align: center;
    background-color: #fff;
    padding: 50px 0;
    color: #000;
}
.aqua-bg {
    background-color: #aaece4;
    padding-top: 30px;
}
h2 {
    font-size: 38px;
    margin: 0;
}
.screens-image {
    display: inline-block;
    vertical-align: middle;
}
.screens-image>img {
    width: 100%;
    max-width: 390px;
}
.offers-list {
    display: inline-block;
    vertical-align: middle;
}
.offers-list>li {
    width: 330px;
    list-style: none;
    padding: 5px 0;
    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;
    border-right: none!important;
    border-left: none!important;
    margin: 20px 0;
    font-size: 16px;
}
.offers-list>li img {
    margin-right: 17px;
}
.panel-heading {
    padding: 0;
    border-radius: 0!important;
}
.panel-default {
    background-color: inherit;
    border-color: #fff;
    border-radius: 0!important;
    border-right: none!important;
    border-left: none!important;
}
.panel-default>.panel-heading {
    color: #000;
    background-color: inherit!important;
    border-color: #fff;
    border-right: none!important;
    border-left: none!important;
}
.panel-body {
    border: none!important;
}
.panel {
    box-shadow: none!important;
}

.bottom-line {
    height: 1px;
    width: 115px;
    background: #aaece4;
    margin: 20px auto auto auto;
}
.grey-bg {
    background-color: #4e4e4e;
    padding-top: 95px;
    padding-bottom: 85px;
}
.point-holder {
    text-align: center;
}
.point-holder>p {
    margin-top: 60px;
    margin-bottom: 0;
    width: 180px;
    font-size: 16px;
    color: #fff;
}
.image-holder {
    cursor: pointer;
}
/* ... */

